@@ -35,6 +35,7 @@
 *****	Full virtual robot support ; you can now create 2 lists with the same same in different virtual robots.
 *****	The database structure should be updated (automatically performed with MySQL) to add new database fields.
 *****	Check the create_db.XX scripts (XX being your RDBMS) to know about the new fields
+*****	Make sure to recreate appropriate INDEXES and PRIMARY KEYS
 *****	The spool file names has evolved to include the hostname, but existing spools will be processed.
 
 	Auth.conf file can be defined for each virtual robot.
